<resources>
    <string name="app_name">Pet Adopt</string>
    <string name="app_id">1599819030268203</string>
    <string name="google_play_app_url">https://play.google.com</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_adoption_search">Búsqueda adopción</string>

    <string name="cat_string">Gato</string>
    <string name="dog_string">Perro</string>
    <string name="male_string">Macho</string>
    <string name="female_string">Hembra</string>

    <string name="edit_message">Editame</string>
    <string name="button_send">Enviar</string>
    <string name="login_message">Por favor, logueate</string>
    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">Cerrado</string>
    <string name="exit_toast">Presiona atrás de nuevo para salir</string>

    <string name="new_pet_button">Agregar mascota</string>
    <string name="new_pet_title">Agregá una mascota nueva!</string>
    <string name="new_pet_name_hint">Nombre</string>
    <string name="new_pet_type_hint">Tipo</string>
    <string name="new_pet_age_hint">Edad</string>
    <string name="new_pet_gender_hint">Género</string>
    <string name="new_pet_main_color_hint">Color principal</string>
    <string name="new_pet_second_color_hint">Color secundario</string>
    <string name="new_pet_description_hint">Descripción</string>
    <string name="new_pet_vaccinated_hint">¿Tiene las vacunas al día?</string>
    <string name="new_pet_friendly_hint">¿Tiene buena relación con otras mascotas?</string>
    <string name="new_pet_children_friendly_hint">¿Tiene buena relación con los niños?</string>
    <string name="new_pet_needs_transit_home_hint">¿Necesita un hogar transitorio?</string>
    <string name="new_pet_video_1_hint">URL Video 1</string>
    <string name="new_pet_video_2_hint">URL Video 2 </string>
    <string name="new_pet_submit">Publicar mascota</string>
    <string name="choose_location">Elegir ubicación</string>
    <string name="profile_save">Guardar</string>
    <string name="loading">Cargando</string>
    <string name="user_name_hint">Nombre</string>
    <string name="user_last_name_hint">Apellido</string>
    <string name="user_phone_hint">Telefono</string>
    <string name="user_email_hint">Email</string>
    <string name="center_pin">Centrar pin</string>

    <string name="pet_creation_error">Error creando publicación, intentá nuevamente más tarde</string>
    <string name="pet_creation_success">Publicación creada!</string>
    <string name="add_pet_name_not_completed">El nombre no puede estar vacio</string>
    <string name="add_pet_age_not_completed">La edad no puede estar vacía</string>

    <string name="search_button">Buscar</string>
    <string name="search_hint">Introduce tu búsqueda</string>
    <string name="search_title">Búsqueda Simple</string>
    <string name="search_error">Hubo un error en la búsqueda. Intente nuevamente más tarde</string>
    <string name="search_empty">Debés escribir algo para buscar</string>
    <string name="no_results">No hay resultados para mostrar</string>
    <string name="advance_search_title">Búsqueda Avanzada</string>
    <string name="advance_search_color">Color</string>
    <string name="advance_search_no_filter">Debes seleccionar algún filtro para realizar la búsqueda</string>
    <string name="advance_search_location">Elegir ubicación cercana</string>
    <string name="new_pet_submit_image">Añadir imagenes</string>
    <string name="add_pet_location_not_chosen">La ubicación no puede estar vacía</string>
    <string name="add_pet_image_not_uploaded">Debés subir por lo menos una imagen de tu mascota</string>


    <string name="name_type_sep">-</string>
    <string name="results_title">Resultados</string>
    <string name="profile_updated">Perfil actualizado</string>
    <string name="something_wrong">Algo salio mal</string>
    <string name="email_in_use">Email en uso!</string>
    <string name="invalid_email">Email inválido</string>
    <string name="detail_show_map">Mostrar en Mapa</string>
    <string name="type_field">Tipo</string>
    <string name="age_field">Edad</string>
    <string name="gender_field">Genero</string>
    <string name="primary_color_field">Color primario</string>
    <string name="colors_field">Color</string>
    <string name="description_field">Descripción</string>
    <string name="videos_field">Videos</string>
    <string name="vaccine_field">¿Tiene las vacunas al día?</string>
    <string name="pet_relationship_field">¿Tiene buena relación con otras mascotas?</string>
    <string name="kids_relationship_field">¿Tiene buena relación con los niños?</string>
    <string name="transit_field">¿Necesita un hogar transitorio?</string>
    <string name="true_value">Sí</string>
    <string name="false_value">No</string>
    <string name="show_questions">Ver más preguntas</string>
    <string name="ask_questions">Hacer pregunta</string>
    <string name="questions">Preguntas</string>
    <string name="no_questions">No hay preguntas para esta mascota</string>
    <string name="requesters_title">Solicitantes</string>
    <string name="user_missing_info">Debe completar la información de su perfil antes de adoptar</string>
    <string name="ask_for_adoption_success">Se ha enviado su solicitud de adopción</string>
    <string name="ask_for_adoption_error">Hubo un error al solicitar la adopción. Intente nuevamente más tarde</string>
    <string name="send_question">Enviar</string>
    <string name="ask_question_hint">Ingresá tu pregunta</string>
    <string name="must_write_question">Ingrese una pregunta por favor</string>
    <string name="add_question_success">Se ha añadido su pregunta</string>
    <string name="pet_image">Imagen de la mascota</string>
    <string name="adoption_request_notification">Alguien quiere adoptar a tu mascota!</string>
    <string name="answer">Responder</string>
    <string name="answer_question_success">Pregunta contestada exitosamente</string>
    <string name="must_write_answer">La respuesta no puede estar vacía</string>
    <string name="answer_placeholder">Ingresá tu respuesta</string>
    <string name="report_pet">Denunciar Publicacion</string>
    <string name="report">Denunciar</string>
    <string name="sure_report_message">¿Está seguro de que quiere denunciar esta publicación?</string>
    <string name="mark_adoption_success">Se ha confirmado la adopción</string>
    <string name="mark_find_success">Se ha confirmado que se encontró su mascota</string>
    <string name="mark_adoption_error">No se ha podido confirmar la adopción. Intentelo de nuevo más tarde</string>
    <string name="lost_or_adopt_hint">Tipo de publicación</string>
    <string name="adoption">Adopción</string>
    <string name="loss">Pérdida</string>
    <string name="confirm_adoption_request">¿Desea enviar la solicitud de adopción?</string>
    <string name="confirm_adoption_request_message">Confirmar</string>
    <string name="reject_adoption_request_message">Cancelar</string>
    <string name="confirm_find_notification">¿Desea notificar que piensa que ha encontrado esta mascota?</string>
    <string name="find_notification">Alguien cree que encontró tu mascota</string>
    <string name="accepted_own_adoption_request">Han aprobado tu solicitud de adopción</string>
    <string name="accepted_own_lost_notification">Han confirmado la mascota que encontraste</string>
    <string name="pet_already_adopted">Esta mascota ya ha sido adoptada</string>
    <string name="found">Encontrada</string>
    <string name="pet_reporting_success">Publicación denunciada con éxito</string>
    <string name="pet_reporting_failed">Error al denunciar, intente más tarde</string>
    <string name="auth_error">Algo anduvo mal. Por favor vuelva a iniciar sesión.</string>
    <string name="try_again">Algo anduvo mal. Por favor intente nuevamente mas tarde</string>
    <string name="blocked_login">Tu usuario ha sido bloqueado. Si crees que ha habido un error, contacta al administrador (soporte@petadopt.com)</string>
    <string name="question_reported">Pregunta denunciada</string>
    <string name="question_reporting_error">Hubo un error al denunciar la pregunta. Intente nuevamente más tarde</string>
    <string name="question_reporting_confirmation">¿Está seguro de que quiere denunciar esta pregunta?</string>
    <string name="adoption_share_title">%s necesita un hogar</string>
    <string name="adoption_share_description">Descargá PetAdopt para adoptar a esta mascota</string>
    <string name="loss_share_title">%s se perdió. ¿Nos ayudás a buscar?</string>
    <string name="loss_share_description">Descargá PetAdopt para ayudar a encontrar a esta mascota</string>
    <string name="found_share_title">Encontramos  a %s. ¿Nos ayudás a encontrar a su dueño?</string>
    <string name="found_share_description">Descargá PetAdopt para ayudar a encontrar a su dueño</string>
    <string name="matched_lost_pet_notification">Alguien encontró una mascota parecida a la que perdiste!</string>
    <string name="matched_found_pet_notification">Alguien perdió una mascota parecida a la que encontraste!</string>


</resources>
