<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_coent"
            android:background="@color/app_background"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp">

            <android.support.v17.leanback.widget.HorizontalGridView
                android:id="@+id/horizontal_gridView"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/show_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/horizontal_gridView"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_show_map" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/adopt_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/horizontal_gridView"
                android:layout_marginEnd="20dp"
                app:fab_backgroundColor="@color/button_background"
                app:fab_elevation="2dp"
                app:fab_iconSrc="@drawable/white_heart"
                app:fab_radius="30dp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/type_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/show_map_button"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/type_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />



            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/age_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/type_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/age_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gender_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/age_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/gender_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/colors_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/gender_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/colors"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/colors_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/description_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/colors_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/description_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/video_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/description_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.EditText
                    android:id="@+id/videos"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/image"
                    android:hint="@string/videos_field"
                    android:textSize="18sp"
                    app:et_dividerHeight="0dp"
                    app:et_labelEnable="true"
                    app:et_labelTextColor="@color/title_text" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/other_info_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/show_map_button"
                android:layout_below="@+id/video_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/vaccines_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:text="@string/vaccine_field"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/relationship_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_below="@+id/vaccines_value"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:autoLink="web"
                    android:text="@string/relationship_field"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/kid_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_below="@+id/relationship_value"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:autoLink="web"
                    android:text="@string/kid_field"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/transit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_below="@+id/kid_value"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:autoLink="web"
                    android:text="@string/transit_field"
                    android:textColor="@color/title_text"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ask_question_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/other_info_item"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/ask_question"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/ask_questions"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sample_question_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ask_question_layout"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/questions_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/questions"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/questions_title"
                    android:background="@android:color/darker_gray" />

                <include
                    android:id="@+id/question_layout"
                    layout="@layout/qa_list_item"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bottom_line" />

                <Button
                    android:id="@+id/show_questions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_layout"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/image"
                    android:autoLink="web"
                    android:text="@string/show_questions"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
